--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,17 +493,18 @@ h1 {
         display: flex;
         flex-direction: column;     
         width: 100%;
+        height: auto;
    }
 
     .home .img-home {
-        margin-top: 5rem;
+        margin-top: 4rem;
     }
    
 
   /* Produtos*/
 
   .container-produtos {
-    height: 240vh;
+    height: 295vh;
   }
   
     .produto {
@@ -520,7 +521,7 @@ h1 {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 310vh;
+        height: auto;
       
     }
     .selecao-produtos .container-selecao-produtos {
@@ -539,7 +540,7 @@ h1 {
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 50vh;
+        height: auto;
     }
 
     .radape-cadastro .info-cadastro {
